fix: 修复配置桥接、单测、安全模式与一批 UI 问题
- 单测改为断言 CapsuleConfig，修复编译失败
- Remote 桥接同步 Long，服务断开时 detach
- Hook prefs 失败不再永久缓存 SystemUI 本地 SP；refreshAll 判空
- 胶囊 draw 安全模式与 Provider 路径一致
- 详情页底部 inset、横竖屏开关解耦沉浸式、偏移滑条对齐钳制
- 重置/恢复改按钮语义并 Toast；文案与深色状态卡；关 blur 不订阅重力
- CI 增加 unit test；gitignore 白名单 .github；版本 1.0.3 (13)